--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project.PAW - 홈</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
-<body class="bg-light">
+<body class="bg-gray-100">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
@@ -21,7 +22,57 @@
   </nav>
 
   <div class="container pt-5 mt-5">
-    <h1 class="text-center my-5 text-3xl fw-bold text-primary">진행 중인 구조 프로젝트</h1>
+    <h1 class="text-center my-5 text-3xl font-bold text-blue-700">Project.PAW의 철학</h1>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mb-5">
+
+      <div class="col">
+        <div class="card h-100 shadow-sm border-left border-primary">
+          <div class="card-body">
+            <h5 class="card-title text-primary">1. 본질은 ‘연결’이다</h5>
+            <p class="card-text">단순한 후원이 아닌, 감정적 연결을 중심으로 설계된 플랫폼입니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100 shadow-sm border-left border-success">
+          <div class="card-body">
+            <h5 class="card-title text-success">2. 도움은 본능, 연결은 선택</h5>
+            <p class="card-text">행동으로 이어지는 선택을 돕기 위해 투명하고 신뢰 가능한 구조를 설계했습니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100 shadow-sm border-left border-warning">
+          <div class="card-body">
+            <h5 class="card-title text-warning">3. 망설임을 용기로</h5>
+            <p class="card-text">구조에 있어 망설임의 순간에 용기를 불어넣는 플랫폼이 되고자 합니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100 shadow-sm border-left border-danger">
+          <div class="card-body">
+            <h5 class="card-title text-danger">4. 숫자보다 감정</h5>
+            <p class="card-text">구조 수보다 연결된 마음의 수를 더 중시합니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100 shadow-sm border-left border-info">
+          <div class="card-body">
+            <h5 class="card-title text-info">5. 주는 사람도, 받는 사람도 행복하게</h5>
+            <p class="card-text">따뜻한 감정을 남기는 구조를 지향합니다.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <h1 class="text-center my-5 text-3xl font-bold text-blue-700">진행 중인 구조 프로젝트</h1>
     <div class="row" id="projectContainer"></div>
   </div>
 
@@ -37,39 +88,33 @@
 
       projects.forEach(project => {
         const col = document.createElement("div");
-        col.className = "col-md-6 col-lg-6 mb-4";
+        col.className = "col-md-6 col-lg-4 mb-4";
 
         const card = document.createElement("div");
-        card.className = "d-flex flex-row align-items-center border rounded shadow-sm p-3 bg-white h-100";
+        card.className = "card h-100 shadow-sm";
         card.style.cursor = "pointer";
         card.onclick = () => {
           window.location.href = `project.html?id=${project.id}`;
         };
 
-        const imageWrapper = document.createElement("div");
-        imageWrapper.className = "flex-shrink-0 me-3";
-        imageWrapper.innerHTML = `
-          <img src="${project.representativeImage || 'https://placekitten.com/300/200'}" alt="대표 이미지" class="rounded" style="width: 140px; height: 100px; object-fit: cover;">
-        `;
+        const img = document.createElement("img");
+        img.className = "card-img-top";
+        img.src = project.representativeImage || "https://placekitten.com/400/250";
+        img.alt = "대표 이미지";
 
-        const contentWrapper = document.createElement("div");
-        contentWrapper.className = "flex-grow-1";
-        contentWrapper.innerHTML = `
-          <h5 class="fw-bold mb-1">${project.name}</h5>
-          <p class="text-muted small mb-2">${project.situation}</p>
-          <ul class="list-unstyled small mb-2">
-            <li><strong>목표:</strong> ${project.goalAmount}원</li>
-            <li><strong>현황:</strong> ${project.currentAmount || 0}원</li>
+        const body = document.createElement("div");
+        body.className = "card-body";
+        body.innerHTML = `
+          <h5 class="card-title">${project.name || "이름 없음"}</h5>
+          <p class="card-text">${project.situation || "상황 설명 없음"}</p>
+          <ul class="list-unstyled small">
+            <li><strong>목표:</strong> ${project.goalAmount || 0}원</li>
             <li><strong>구조자 부담:</strong> ${project.ownerAmount || 0}원</li>
           </ul>
-          <div class="d-flex gap-2">
-            <a href="${project.kakaoLink}" target="_blank" class="btn btn-sm btn-outline-warning rounded-pill">💬 카카오톡</a>
-            <button class="btn btn-sm btn-outline-primary rounded-pill" onclick="event.stopPropagation(); window.location.href='project.html?id=${project.id}'">🔎 상세보기</button>
-          </div>
         `;
 
-        card.appendChild(imageWrapper);
-        card.appendChild(contentWrapper);
+        card.appendChild(img);
+        card.appendChild(body);
         col.appendChild(card);
         container.appendChild(col);
       });
