--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project.PAW - 홈</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+  <style>
+    .project-image {
+      height: 200px;
+      object-fit: cover;
+    }
+  </style>
 </head>
-<body class="bg-gray-100">
+<body class="bg-light">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
@@ -22,57 +27,59 @@
   </nav>
 
   <div class="container pt-5 mt-5">
-    <h1 class="text-center my-5 text-3xl font-bold text-blue-700">Project.PAW의 철학</h1>
+    <h1 class="text-center my-5 text-3xl fw-bold text-primary">Project.PAW의 철학</h1>
+    <p class="text-center text-muted mb-5 fs-5">Project.PAW는 <strong>개인과 개인을 연결합니다.</strong><br>감정과 책임이 만나는 순간, 그 연결이 진짜 변화를 만들어냅니다.</p>
+    
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mb-5">
 
       <div class="col">
-        <div class="card h-100 shadow-sm border-left border-primary">
+        <div class="card h-100 shadow-sm border-start border-primary border-3">
           <div class="card-body">
-            <h5 class="card-title text-primary">1. 본질은 ‘연결’이다</h5>
-            <p class="card-text">단순한 후원이 아닌, 감정적 연결을 중심으로 설계된 플랫폼입니다.</p>
+            <h5 class="card-title text-primary">1. 연결이 본질입니다</h5>
+            <p class="card-text">Project.PAW는 기부가 아닌, 감정의 연결을 추구합니다.</p>
           </div>
         </div>
       </div>
 
       <div class="col">
-        <div class="card h-100 shadow-sm border-left border-success">
+        <div class="card h-100 shadow-sm border-start border-success border-3">
           <div class="card-body">
             <h5 class="card-title text-success">2. 도움은 본능, 연결은 선택</h5>
-            <p class="card-text">행동으로 이어지는 선택을 돕기 위해 투명하고 신뢰 가능한 구조를 설계했습니다.</p>
+            <p class="card-text">선택은 어렵습니다. 하지만 한 사람의 선택이 누군가의 삶을 바꿉니다.</p>
           </div>
         </div>
       </div>
 
       <div class="col">
-        <div class="card h-100 shadow-sm border-left border-warning">
+        <div class="card h-100 shadow-sm border-start border-warning border-3">
           <div class="card-body">
             <h5 class="card-title text-warning">3. 망설임을 용기로</h5>
-            <p class="card-text">구조에 있어 망설임의 순간에 용기를 불어넣는 플랫폼이 되고자 합니다.</p>
+            <p class="card-text">주저하는 순간에 용기를 줄 수 있다면, 우리는 존재할 이유가 있습니다.</p>
           </div>
         </div>
       </div>
 
       <div class="col">
-        <div class="card h-100 shadow-sm border-left border-danger">
+        <div class="card h-100 shadow-sm border-start border-danger border-3">
           <div class="card-body">
             <h5 class="card-title text-danger">4. 숫자보다 감정</h5>
-            <p class="card-text">구조 수보다 연결된 마음의 수를 더 중시합니다.</p>
+            <p class="card-text">우리는 구조 건수보다 연결된 마음의 수를 더 중요하게 생각합니다.</p>
           </div>
         </div>
       </div>
 
       <div class="col">
-        <div class="card h-100 shadow-sm border-left border-info">
+        <div class="card h-100 shadow-sm border-start border-info border-3">
           <div class="card-body">
             <h5 class="card-title text-info">5. 주는 사람도, 받는 사람도 행복하게</h5>
-            <p class="card-text">따뜻한 감정을 남기는 구조를 지향합니다.</p>
+            <p class="card-text">이 연결은 누군가를 위한 ‘의무’가 아닌, 우리 모두의 ‘기쁨’입니다.</p>
           </div>
         </div>
       </div>
 
     </div>
 
-    <h1 class="text-center my-5 text-3xl font-bold text-blue-700">진행 중인 구조 프로젝트</h1>
+    <h1 class="text-center my-5 text-3xl fw-bold text-primary">진행 중인 구조 프로젝트</h1>
     <div class="row" id="projectContainer"></div>
   </div>
 
@@ -98,7 +105,7 @@
         };
 
         const img = document.createElement("img");
-        img.className = "card-img-top";
+        img.className = "card-img-top project-image";
         img.src = project.representativeImage || "https://placekitten.com/400/250";
         img.alt = "대표 이미지";
 
