--- a/project.html
+++ b/project.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project.PAW - 프로젝트 상세</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <title>Project.PAW - 구조 상세보기</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    .project-image {
+    .main-image {
       width: 100%;
-      max-height: 300px;
+      height: 300px;
       object-fit: cover;
       border-radius: 10px;
     }
-    .image-gallery img {
+    .gallery-image {
       width: 100%;
-      height: auto;
+      height: 200px;
       object-fit: cover;
-      margin-bottom: 15px;
-      border-radius: 5px;
+      border-radius: 8px;
     }
   </style>
 </head>
 <body class="bg-light">
-
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">🐾 Project.PAW</a>
@@ -30,14 +28,13 @@
         <li class="nav-item"><a class="nav-link" href="index.html">🏠 홈</a></li>
         <li class="nav-item"><a class="nav-link" href="project_list.html">📋 후원하기</a></li>
         <li class="nav-item"><a class="nav-link" href="create.html">➕ 프로젝트 등록</a></li>
-        <li class="nav-item"><a class="nav-link" href="login.html">🔑 로그인</a></li>
       </ul>
     </div>
   </nav>
 
-  <div class="container pt-5 mt-5">
-    <div id="projectDetail"></div>
-  </div>
+  <main class="container pt-5 mt-5">
+    <div id="projectDetail" class="mt-4"></div>
+  </main>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
@@ -49,43 +46,46 @@
       const container = document.getElementById("projectDetail");
 
       if (!project) {
-        container.innerHTML = `<div class="text-center mt-5"><h3>⚠️ 프로젝트를 찾을 수 없습니다.</h3></div>`;
+        container.innerHTML = '<div class="alert alert-danger">프로젝트를 찾을 수 없습니다.</div>';
         return;
       }
 
-      container.innerHTML = `
-        <h1 class="text-center mb-4 text-primary fw-bold">${project.name}</h1>
-        <img src="${project.representativeImage}" class="project-image mb-4" alt="대표 이미지">
+      const galleryImages = [project.representativeImage, ...project.sceneImages, ...project.receiptImages];
+      const galleryHTML = galleryImages.map(src => `<div class="col-md-4"><img src="${src}" class="gallery-image mb-3" /></div>`).join('');
 
-        <div class="row">
+      container.innerHTML = `
+        <h2 class="fw-bold mb-4">🐾 ${project.name}</h2>
+        <img src="${project.representativeImage}" class="main-image mb-4" alt="대표 이미지">
+
+        <div class="row mb-4">
           <div class="col-md-6">
-            <h5 class="fw-bold">구조 상황</h5>
-            <p>${project.situation || "상황 설명이 없습니다."}</p>
-            <h5 class="fw-bold mt-4">구조자 정보</h5>
-            <p><strong>구조자 이름:</strong> ${project.ownerName || "익명"}</p>
-            <p><strong>카카오톡 연락처:</strong> <a href="${project.kakaoLink}" target="_blank">${project.kakaoLink}</a></p>
+            <h5 class="fw-bold">📖 구조 상황</h5>
+            <p>${project.situation}</p>
           </div>
           <div class="col-md-6">
-            <h5 class="fw-bold">목표 및 비용</h5>
-            <ul class="list-group mb-4">
-              <li class="list-group-item"><strong>목표 금액:</strong> ${project.goalAmount}원</li>
-              <li class="list-group-item"><strong>구조자 부담금:</strong> ${project.ownerAmount}원</li>
-            </ul>
-
-            <h5 class="fw-bold">후원금 사용 계획</h5>
-            <p>${project.usagePlan || "작성된 내용이 없습니다."}</p>
+            <h5 class="fw-bold">💸 목표 및 부담금</h5>
+            <p><strong>목표 금액:</strong> ${project.goalAmount}원</p>
+            <p><strong>구조자 부담:</strong> ${project.ownerAmount}원</p>
           </div>
         </div>
 
-        <div class="mt-5">
-          <h5 class="fw-bold">사진 갤러리</h5>
-          <div class="row image-gallery">
-            ${(project.additionalImages || []).map(img => `
-              <div class="col-md-4">
-                <img src="${img}" alt="추가 이미지">
-              </div>
-            `).join('')}
-          </div>
+        <div class="mb-4">
+          <h5 class="fw-bold">🖼️ 등록 이미지</h5>
+          <div class="row">${galleryHTML}</div>
+        </div>
+
+        <div class="mb-4">
+          <h5 class="fw-bold">💬 후기</h5>
+          <p>후기 기능은 추후 연결 예정입니다.</p>
+        </div>
+
+        <div class="mb-4">
+          <a href="https://pf.kakao.com/_XnxlxjG" target="_blank" class="btn btn-primary">💌 카카오톡으로 따뜻한 마음 전하기</a>
+        </div>
+
+        <div class="form-group">
+          <label for="adminApproval">🔐 관리자 승인 상태</label>
+          <input type="text" class="form-control" id="adminApproval" value="승인 대기 중">
         </div>
       `;
     });
